using Diplom.Core.Entities;

namespace Diplom.BLL.DTO;

public class SourceDto
{
    public Guid Id { get; set; }
    public string Name { get; set; }
}