using Diplom.Core.Entities;

namespace Diplom.BLL.DTO;

public class UserDto {}