namespace Diplom.BLL.Interfaces;

public interface IGoodOrderService
{
    
}