using Diplom.BLL.Interfaces;

namespace Diplom.BLL.Services;

public class GoodOrderService : IGoodOrderService
{
}